fix some padding issues on mobile

--- a/components/main/TourSection.module.scss
+++ b/components/main/TourSection.module.scss
@@ -132,6 +132,7 @@
 
 @media screen and (max-width: 1000px) {
   .box {
+    padding: 8rem 0 10rem 0;
     margin: -8rem;
     clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
     & .heading {
